package dev.bfms.tankgame;

public class Constants {
}
