package dev.bfms.tankgame;

public class Point {
}
