package dev.bfms.tankgame;


import javafx.scene.canvas.GraphicsContext;

public class Terrain implements Drawable{

    @Override
    public void draw(GraphicsContext gc) {

    }

    @Override
    public void erase(GraphicsContext gc) {

    }
}
