package dev.bfms.tankgame;

public class Velocity {
}
